# ansible

./: .ansible-lint  .gitignore  .gitmodules  .yamllint.yml  Dockerfile  LICENSE  Makefile  README.md  ansible.cfg  config.yml  hosts.yml  netbox_inventory.yml  playbook.yml  pyproject.toml  requirements.in  requirements.txt  yamllint.yml
.circleci/: config.yml
.github/workflows/: lint.yml
etc/: sudo-sftp  sudo-ssh  vault_secret.sh
group_vars/: device_roles_backup-server.yml  device_roles_container-host.yml  device_roles_lxd-host.yml  device_roles_router.yml
group_vars/all/: docker.yml  traefik.yml
host_vars/: GW-B32.yml  GW-B53.yml  GW.yml  GW2.yml  MARCONI.yml  ZEPLER.yml
host_vars/CONTAINERS-1/: kmicms.yml  netbox.yml  traefik.yml
roles/backed-up/files/: backup-mysql  backup3.pub
roles/backed-up/tasks/: main.yml
roles/backed_up/files/: backup-b32-1.pub  backup-b53-1.pub  backup2.pub
roles/backed_up/tasks/: main.yml  mysql.yml
roles/containers_dev/tasks/: containers.yml  main.yml
roles/containers_prod/tasks/: containers.yml
roles/containers_secure/tasks/: containers.yml
roles/cron-mail-redirect/files/: aliases
roles/cron-mail-redirect/templates/: main.cf
roles/cron_mail_redirect/handlers/: main.yml
roles/cron_mail_redirect/tasks/: main.yml
roles/cron_mail_redirect/templates/: postfix_generic.j2
roles/dns-slave/files/: named.conf.local  named.conf.options
roles/dns-slave/handlers/: main.yml
roles/dns-slave/tasks/: main.yml  old.yml
roles/gw/: README.md
roles/gw/tasks/: bird.yml  (+6 more)
scripts/: lint.sh
sown-common/tasks/: main.yml
(+107 files in other folders)
