[tool.poetry]
name = "sown-ansible"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^9.3.0"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
ansible-compat = "<4"
ansible-lint = "^6.8.7"
yamllint = "^1.35.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
