[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^10.6.0"
pytz = "^2024.2"  # Required for netbox inventory plugin

[tool.poetry.group.dev.dependencies]
ansible-lint = {version = "^24", markers = "platform_system != 'Windows'"}
yamllint = "^1.35.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
